--- a/index.html
+++ b/index.html
@@ -1,47 +1,288 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Resto</title>
+  <link rel="stylesheet" href="./Assets/styles/index.css">
+  <link rel="shortcut icon" href="./Assets/images/favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  <h1>COURS GITHUB</h1>
-  <h2>Version 2</h2>
+  <header>
+    <nav>
+      <div class="logo">
+        <h2>resto</h2>
+      </div>
+      <ul>
+        <li>home</li>
+        <li>reservations</li>
+        <li>menu</li>
+        <li>blog</li>
+        <li>pages</li>
+        <li>shop</li>
+        <li>contact</li>
+      </ul>
+      <div class="nav-icon">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </div>
+      <h2>Welcome</h2>
+      <h1>the resto</h1>
+      <img src="./Assets/images/ic-plate-big.png" alt="Logo the resto">
+      <p>we serve only the freshest ingredients</p>
+    </nav>
+  </header>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ipsa aut aspernatur assumenda voluptate ratione eos
-    natus debitis delectus, sunt qui iure tempore ab nesciunt sapiente esse neque sed? Modi.</p>
+  <section class="section1">
+    <div class="intro-left">
+      <div class="intro">
+        <h2>discover</h2>
+        <h3>our store</h3>
+        <img src="./Assets/images/ic-plate.png" alt="icone assiette">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ipsum, voluptas molestias perferendis
+          blanditiis eligendi. Minus alias laboriosam dolorem doloribus.</p>
+        <img src="./Assets/images/avatar-01.jpg" alt="chef cook">
+        <h3>russell stephens</h3>
+        <p>chef cook</p>
+      </div>
+    </div>
+    <div class="intro-right">
+      <img src="./Assets/images/store-01.jpgs" alt="plat saumon">
+    </div>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate assumenda saepe iusto blanditiis voluptatum
-    asperiores earum labore voluptate tenetur, ipsum impedit minima alias culpa consequatur totam? Rem voluptatum soluta
-    ipsa nam illum ut, officia sunt recusandae, ab corrupti provident porro voluptate? Maiores sed hic non sit! Non
-    corporis sint placeat illum illo. Aspernatur tempora maxime voluptates mollitia assumenda vero, cum laudantium
-    cupiditate illo, tenetur dolores animi nulla delectus reprehenderit ullam exercitationem nobis repudiandae. Laborum
-    natus soluta placeat quo sunt dolor, aut perferendis, facere sed possimus, cum hic. Consequuntur veritatis vel illo
-    dicta. Aspernatur libero odit eaque totam, molestiae similique minus facere molestias, dolor eius excepturi, numquam
-    nihil temporibus distinctio maxime quas iure sit. A, ducimus repellat illum expedita provident repudiandae quod
-    fugiat corporis delectus libero distinctio. Eos temporibus rem ducimus quidem similique ad quibusdam nostrum. Amet
-    magni dolorem voluptate veniam a animi totam rerum deserunt illum ab temporibus molestiae, nesciunt enim rem nihil
-    debitis. Molestias amet nam iure similique id quo accusamus cumque nobis cupiditate est itaque, expedita aspernatur
-    voluptate ab labore natus laboriosam recusandae dignissimos dolores quas doloremque laborum, saepe quos. Nam
-    recusandae sunt laborum distinctio aperiam repudiandae? Molestias facere dolore commodi minus similique? A
-    dignissimos porro quo debitis accusamus iure quasi animi ducimus iusto sed exercitationem expedita omnis non maiores
-    voluptatibus sapiente assumenda aperiam, ea labore obcaecati illo! Harum possimus blanditiis necessitatibus illum,
-    natus, iste odio dolore tempore molestias assumenda et dolorum sequi? Amet accusantium possimus saepe provident
-    eaque assumenda, inventore est quod magnam illo animi impedit aspernatur cum a commodi rerum sunt suscipit quia
-    fugiat id, quos aperiam autem ea! Odio, quidem repellat, illo quas, quod tempora consequatur quos eius repudiandae a
-    dicta. Est vel quidem voluptas quas dignissimos, saepe quis, voluptatem maiores rem nisi deserunt ad. Velit,
-    aspernatur delectus! Molestias ea at tempore eum corporis quam ipsum laboriosam earum, debitis officia, recusandae
-    aliquam beatae velit reiciendis quia quae sint in doloremque consequatur voluptatibus ullam labore? Maxime explicabo
-    voluptatem nihil sint quisquam voluptas maiores natus autem, eaque quae at enim illo doloremque nulla tempore
-    perferendis? Veniam perferendis, numquam possimus animi illum similique et suscipit delectus inventore accusamus
-    aperiam quaerat consequatur aliquam sit deserunt ab dolore beatae magnam saepe. Laboriosam cumque temporibus alias
-    commodi quae dignissimos obcaecati, nostrum delectus voluptas debitis culpa amet hic illo sed quaerat qui ex esse
-    sunt. Quis, odit, molestiae provident quisquam saepe commodi rerum consectetur incidunt magnam doloremque, non
-    reprehenderit. Earum, beatae aliquam?</p>
+  </section>
+  <section class="section2">
+    <div class="menu">
+      <div class="menu1">
+        <h2>discover</h2>
+        <img src="./Assets/images/ic-plate.png" alt="icone plat">
+      </div>
+      <div class="menu2">
+        <ul>
+          <li>breakfast</li>
+          <li>lunch</li>
+          <li>dinner</li>
+          <li>drinks</li>
+          <li>other</li>
+        </ul>
+      </div>
+      <div class="menu3">
+        <div class="menu3-left">
+          <div class="plat">
+            <img src="./Assets/images/dish-item-01.jpg" alt="mushroom">
+            <div>
+              <h3>talian source mushroom</h3>
+              <p>mushroom / garlic / veggies</p>
+            </div>
+            <div class="price">$12</div>
+          </div>
+          <div class="plat">
+            <img src="./Assets/images/dish-item-03.jpg" alt="tuna">
+            <div>
+              <h3>tenu roast source</h3>
+              <p>tuna / potatoes / rice</p>
+            </div>
+            <div class="price">$15</div>
+          </div>
+          <div class="plat">
+            <img src="./Assets/images/dish-item-05.jpg" alt="chicken">
+            <div>
+              <h3>salted fried chicken</h3>
+              <p>chicken / olive oil / salt</p>
+            </div>
+            <div class="price">$20</div>
+          </div>
+          <div class="plat">
+            <img src="./Assets/images/dish-item-07.jpg" alt="salmon">
+            <div>
+              <h3>imported slamon steak</h3>
+              <p>salmon / veggies / oil</p>
+            </div>
+            <div class="price">$16</div>
+          </div>
+
+        </div>
+        <div class="menu3-right">
+          <div class="plat">
+            <img src="./Assets/images/dish-item-02.jpg" alt="potatoes">
+            <div>
+              <h3>fried potatoes with garlic</h3>
+              <p>potatoes / olive oil / garlic</p>
+            </div>
+            <div class="price">$22</div>
+          </div>
+          <div class="plat">
+            <img src="./Assets/images/dish-item-04.jpg" alt="pork">
+            <div>
+              <h3>roast pork (4 sticks)</h3>
+              <p>pork / veggies / shoyu</p>
+            </div>
+            <div class="price">$18</div>
+          </div>
+          <div class="plat">
+            <img src="./Assets/images/dish-item-06.jpg" alt="crab">
+            <div>
+              <h3>crab with curry sources</h3>
+              <p>crab / potatoes / rice</p>
+            </div>
+            <div class="price">$14</div>
+          </div>
+          <div class="plat">
+            <img src="./Assets/images/dish-item-08.jpg" alt="pizza">
+            <div>
+              <h3>baked potato pizza</h3>
+              <p>potato / bread / cheese</p>
+            </div>
+            <div class="price">$16</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section3">
+    <div class="form-content">
+      <div class="time">
+        <h3>time</h3>
+        <h2>open</h2>
+        <img src="./Assets/images/ic-plate.png" alt="logo resto">
+        <h4>monday - friday</h4>
+        <h6>7AM- 11AM (Breakfast) 11AM- 10PM (Lunch/Dinner)</h6>
+        <h4>saturday / sunday</h4>
+        <h6>8AM- 1PM (Brunch) 1PM- 9PM (Lunch/Dinner)</h6>
+        <h4>+15 890 979 25 52</h4>
+      </div>
+      <div class="booking">
+        <h3>reservation</h3>
+        <h2>online booking</h2>
+        <img src="./Assets/images/ic-plate.png" alt="logo resto">
+        <form action="/action.php" method="post">
+          <label for="gender">People</label>
+          <select id="gender">
+            <option value="homme">1</option>
+            <option selected value="femme">2</option>
+            <option value="homme">3</option>
+            <option value="homme">4</option>
+            <option value="homme">5</option>
+            <option value="homme">6</option>
+            <option value="homme">7</option>
+            <option value="homme">8</option>
+          </select>
+          <label for="start"></label>
+          <input type="date" id="start" name="trip-start" value="2022-09-01" min="2022-01-01" max="2024-12-31">
+          <label for="appt"></label>
+          <input type="time" id="appt" name="appt" min="09:00" max="18:00" required>
+          <label for="name">Nom </label>
+          <input id="name" type="text" placeholder="name" required>
+          <label for="name">Phone </label>
+          <input id="name" type="phone" placeholder="phone" required>
+          <label for="name">Email </label>
+          <input id="name" type="email" placeholder="email" required>
+          <input type="submit" value="book now">
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <section class="section4">
+    <div class="event-container">
+      <div class="event-top">
+        <h3>upcoming</h3>
+        <h2>our event</h2>
+        <img src="./Assets/images/ic-plate.png" alt="logo resto">
+      </div>
+      <div class="event-bot">
+        <div class="event-bot-l">
+          <div class="event-bot-l-1">
+            <div class="event-bot-l-1-pic"><img src="./Assets/images/event-01.jpg" alt="night party"></div>
+            <div class="event-bot-l-1-text">
+              <h5>Night Inspirescu Party</h5>
+              <div class="info-address">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>restaurant resto</p>
+                <i class="fa-regular fa-clock"></i>
+                <p>10:00pm - 6:00am</p>
+              </div>
+              <h5>buy tickets</h5>
+            </div>
+          </div>
+          <div class="event-bot-l-1">
+            <div class="event-bot-l-1-pic"><img src="./Assets/images/event-02.jpg" alt="DJ robag"></div>
+            <div class="event-bot-l-1-text">
+              <h5>DJ RobagRuhme</h5>
+              <div class="info-address">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>restaurant resto</p>
+                <i class="fa-regular fa-clock"></i>
+                <p>10:00pm - 6:00am</p>
+              </div>
+              <h5>buy tickets</h5>
+            </div>
+          </div>
+        </div>
+        <div class="event-bot-r">
+          <img src="./Assets/images/event-03.jpg" alt="johnnie">
+          <div class="event-bot-r-text">
+            <div class="event-bot-r-text-1">
+              <h5>Thousands celebrities at Johnnie Night</h5>
+              <div class="info-address">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>restaurant resto</p>
+                <i class="fa-regular fa-clock"></i>
+                <p>10:00pm - 6:00am</p>
+              </div>
+              <h5>buy tickets</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section5">
+    <div class="section5-container">
+      <div class="section5-top"></div>
+      <div class="section5-bot">
+        <p><span>"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nobis nihil pariatur
+          accusantium
+          nesciunt quam obcaecati aspernatur, laborum rem sed veniam delectus quisquam harum adipisci ut esse, fuga
+          dolores qui aliquam quos sint. Ex quam aut hic illum? Aliquam, alias!<span>"</span></p>
+      </div>
+      <h4>russel stepehns</h4>
+      <h6>CEO-HeadPassion</h6>
+    </div>
+
+  </section>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-left">
+        <h3>resto</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium excepturi nostrum autem asperiores
+          officiis deserunt molestias consequatur, et eos blanditiis fugiat laudantium fuga aliquid sequi suscipit
+          repellat nisi odit quia.</p>
+      </div>
+      <div class="footer-right">
+        <form action="/action.php" method="post">
+          <label for="name">newsletter </label>
+          <input id="name" type="email" placeholder="Your email address" required>
+        </form>
+        <h6>follow us:</h6>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-pinterest"></i>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
