--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
       </div>
+    </nav>
+    <div class="header-text">
       <h2>Welcome</h2>
       <h1>the resto</h1>
       <img src="./Assets/images/ic-plate-big.png" alt="Logo the resto">
       <p>we serve only the freshest ingredients</p>
-    </nav>
+    </div>
+
   </header>
 
   <section class="section1">
@@ -54,7 +57,7 @@
       </div>
     </div>
     <div class="intro-right">
-      <img src="./Assets/images/store-01.jpgs" alt="plat saumon">
+      <!-- <img src="./Assets/images/store-01.jpg" alt="plat saumon"> -->
     </div>
 
   </section>
