--- a/index2.html
+++ b/index2.html
@@ -10,11 +10,18 @@
 </head>
 
 <body>
-  <div>
+  <section>
     <button id="btc1">Paris</button>
     <button id="btc2">Tokyo</button>
     <button id="btc3">Seoul</button>
-  </div>
+  </section>
+
+  <div class="mousemove"></div>
+  <div class="mousemove2"></div>
+  <div class="mousemove3"></div>
+
+
+
   <script src="./index2.js"></script>
 </body>
 
