--- a/Metro/index.html
+++ b/Metro/index.html
@@ -14,7 +14,7 @@
   <nav>
     <ul class="menu">
       <li><a href="./index2.html">shop</a></li>
-      <li>collection</li>
+      <li><a href="./index3.html">collection</a></li>
       <li>about</li>
       <li>contacts</li>
     </ul>
